Update to latest airbase
Adds proper OpenTracing support to gateway

Co-authored-by: Will Morrison <wzmorrison@gmail.com>